-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b03
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8279776 | 18.0.1 | Ioi Lam | P3 | Resolved | Fixed | b02 |
| JDK-8278867 | 18 | Ioi Lam | P3 | Resolved | Fixed | b31 |
| JDK-8279694 | 17.0.3-oracle | Harold Seigel | P3 | Resolved | Fixed | b02 |
| JDK-8279680 | 17.0.3 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
Running with -Xshare:off makes the high scores and the low scores more or less meet in the middle.
I haven't yet found the earliest time where this started to happen.
- backported by
-
JDK-8278867 ~13% variation in Renaissance-Scrabble
-
- Resolved
-
-
JDK-8279680 ~13% variation in Renaissance-Scrabble
-
- Resolved
-
-
JDK-8279694 ~13% variation in Renaissance-Scrabble
-
- Resolved
-
-
JDK-8279776 ~13% variation in Renaissance-Scrabble
-
- Resolved
-
- relates to
-
JDK-8238048 Close alignment gaps in InstanceKlass
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/7554d8c1
-
Commit
openjdk/jdk18/967ef0c4
-
Commit
openjdk/jdk/4ba980ba
-
Review
openjdk/jdk17u-dev/64
-
Review
openjdk/jdk18/87
-
Review
openjdk/jdk/6838