8278020: ~13% variation in Renaissance-Scrabble